# prime-rl

./: Dockerfile.cuda13
experiments/analysis/: group_dwell.py  isl_osl.py  rollout_timing.py  train_timeline.py
experiments/dataset/: download_aime2025.sh  download_gsm8k.sh  download_i3_math.sh  download_model.sh  download_r2e_gym.sh  download_swe_models.sh  download_swebench_verified.sh  paths.sh
experiments/enroot/: build_in_container.sh  build_in_container_cuda13.sh  build_sqsh.sh  build_sqsh_cuda13.sh  check_host_efa_gdrcopy.sh  docker_build.sh  enroot_sqsh.sh  verify_sqsh_cuda13.sh
experiments/extreme-off-policy/: GO_CRITERIA.md  README.md
experiments/extreme-off-policy/script/: run_in_container.sh  submit_analysis.sh  submit_prod_replay.sh  submit_swe_replay.sh
experiments/extreme-off-policy/src/: accept_rules.py  fit_alpha.py  gen_drafts.py  microbench_prefill_decode.py  steps.py  swe_trace_to_drafts.py  trace_to_drafts.py  verify_drafts.py
experiments/rollout-simulation/: README.md  build_replay_workload.py  replay_swe.py  summarize_sweep.py
experiments/rollout-simulation/pd_sweep/: run_stage0.sh  run_stage1.sh  run_stage2.sh  stage0.sbatch  stage0_agrs.toml  stage0_deepep_ll.toml  stage0_ep_off.toml  stage0_flashinfer.toml
experiments/rollout-simulation/swe_replay_v1/: pyproject.toml
experiments/rollout-simulation/swe_replay_v1/swe_replay_v1/: __init__.py  harness.py  taskset.py
experiments/training/: submit.sh
experiments/training/swe_qwen30b/: rl.toml
scripts/: cuda13-build-wheels.sh  pyproject-cuda13-patch.sh
skills/training/: SKILL.md
(+21 files in other folders)
