[project]
name = "swe-replay-v1"
version = "0.1.0"
description = "Replay recorded SWE trajectories against real inference (no sandbox, stored reward)."
requires-python = ">=3.11"
dependencies = ["verifiers>=0.2.0", "openai"]
tags = ["multi-turn", "replay", "benchmark", "v1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["swe_replay_v1"]
